# agentbridge

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  app.json  eslint.config.mjs  favicon.icns  install.sh  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  run  tsconfig.json  turbo.json  uninstall.sh  vitest.config.ts
.githooks/: pre-push
.github/: pull_request_template.md
apps/free/app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.preview.conf.json
apps/free/app/src-tauri/capabilities/: default.json
apps/free/app/src-tauri/icons/: icon.icns
apps/free/app/src-tauri/src/: lib.rs  main.rs
docs/: desktop-release.md  mobile-release.md  privacy.html  unified-tool-ui.md  workarounds.md
patches/: @babel__runtime@7.28.6.patch  expo-task-manager@55.0.12.patch
scripts/: buildNumber.js  buildNumber.test.ts  check-deps-layers.cjs  configure-ios-manual-signing.rb  create-macos-dmg.sh  dev.sh  e2e-lifecycle.sh  e2e-test.sh  free-android-release.sh  free-app-android-apk.sh  free-app-android-debug-apk.sh  free-app-android-release.sh  free-app-deploy-cloudflare.sh  free-app-ios-release.sh  free-app-release-dev.sh  free-app-release-preview.sh  free-app-release-production.sh  free-cli-download-tools.sh  free-cli-test-continue-fix.sh  free-desktop-release.sh  free-server-build.sh  free-server-deploy.sh  free-server-start.sh  migrate-telemetry.py  next-android-version-code.js  next-ios-build-number.js  npm-publish.sh  prepare-desktop-updater-config.js  (+11 more)
(+1166 files in other folders)
